# vmware-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: .env.example  logging.yml  prometheus.yml
docs/: integration_guide.md
src/: __init__.py  auth.py  config.py  exceptions.py  host_operations.py  main.py  mcp_server.py  n8n_integration.py  ollama_integration.py  resource_operations.py  snapshot_operations.py  utils.py  vm_operations.py
